--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="pref_temperature_units">Temperature Units</string>
     <string name="pref_temperature_units_key">temperature_units</string>
     <string name="pref_temperature_units_default">Metric</string>
+    <string name="Share">share</string>
 
     <array name="temperature_units">
         <item>Metric</item>
